--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <title>FoundMC</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/estilos/estilos.css">
     
 </head>
 <body>
-  
 <header class="header">
- <div class="recaudro"> 
+  <div class="recuadro">
     <div id="logo">
       <img src="/imagenes/mic.png" alt="image"width="100"height="100">
    </div>    
- <nav >   
+ <nav class="nav">   
     <ul >
         <li><a href="index.html">inicio</a>
         </li>
-        <li><a href="html/artistas.html">artistas</a>
+        <li><a href="html/artistas.html" class="enlace_art">artistas</a>
         </li>
         <li><a href="html/sobre_nosotros.html" class="enlace_sb">sobre nosotros</a>
         </li>
@@ -39,5 +40,7 @@
         <p> cabe calcar que estas selecciones de artistas son de nuestro gusta</p>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
